[gd_scene load_steps=6 format=3 uid="uid://dg8j4isgoexls"]

[ext_resource type="Script" path="res://scenes/MainChat/MainChat.gd" id="1_i0ssy"]
[ext_resource type="Texture2D" uid="uid://1vnf3pbmwuam" path="res://assets/images/disconnect.svg" id="2_jhovj"]
[ext_resource type="FontVariation" uid="uid://c7afrdiv4foeo" path="res://assets/font/Roboto.tres" id="3_4h8rv"]
[ext_resource type="AudioStream" uid="uid://b1ab6l0tv3coe" path="res://assets/sounds/disconnect.mp3" id="3_oskle"]
[ext_resource type="AudioStream" uid="uid://x4e1hwsqbmrb" path="res://assets/sounds/connect.mp3" id="4_dbh4k"]

[node name="Node2D" type="Node2D" node_paths=PackedStringArray("retry_timer", "text_input", "chat_container", "connection_indicator", "disconnect_player", "connect_player", "url_label")]
script = ExtResource("1_i0ssy")
retry_timer = NodePath("WebSocketRetryTimer")
text_input = NodePath("CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer2/LineEdit")
chat_container = NodePath("CanvasLayer/Control/VBoxContainer/ScrollContainer/VBoxContainer")
connection_indicator = NodePath("CanvasLayer/Control/VBoxContainer/StatusBar/Connection_Indicator")
disconnect_player = NodePath("DisconnectPlayer")
connect_player = NodePath("ConnectPlayer")
url_label = NodePath("CanvasLayer/Control/VBoxContainer/StatusBar/Url_Label")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusBar" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Connection_Indicator" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/StatusBar"]
layout_mode = 2
texture = ExtResource("2_jhovj")
stretch_mode = 3

[node name="Url_Label" type="Label" parent="CanvasLayer/Control/VBoxContainer/StatusBar"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4h8rv")
theme_override_font_sizes/font_size = 40

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/StatusBar/MarginContainer"]
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Options"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
text = "Send Message
"

[node name="DisconnectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oskle")
volume_db = -14.0

[node name="ConnectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dbh4k")
volume_db = -14.0

[node name="WebSocketRetryTimer" type="Timer" parent="."]
one_shot = true

[node name="PingTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="text_changed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer2/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="WebSocketRetryTimer" to="." method="_on_retry_timer_timeout"]
[connection signal="timeout" from="PingTimer" to="." method="_on_ping_timer_timeout"]
